--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
     "react-with-gesture": "^4.0.2",
+    "styled-components": "^5.2.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
